miniav_ffi/miniav_c/include/miniav_capture.h


// --- Buffer Callback ---
typedef void (*MiniAVBufferCallback)(const MiniAVBuffer *buffer,
                                     void *user_data);


// --- Common / Utility API ---
MINIAV_API MiniAVResultCode MiniAV_GetVersion(uint32_t *major, uint32_t *minor,
                                              uint32_t *patch);

MINIAV_API const char *MiniAV_GetVersionString(void);

MINIAV_API MiniAVResultCode MiniAV_SetLogCallback(MiniAVLogCallback callback,
                                                  void *user_data);

MINIAV_API MiniAVResultCode MiniAV_SetLogLevel(MiniAVLogLevel level);

MINIAV_API const char *MiniAV_GetErrorString(MiniAVResultCode code);

// Releases every native resource backing a delivered MiniAVBuffer. MUST be
// called exactly once per buffer handed to a capture callback.
//
// On the GPU paths this ALSO closes the shared NT handle / GPU handle that was
// exposed in planes[0].data_ptr — miniav owns it, the app must not close it,
// and the app must have finished importing it before calling this. Treat the
// handle as invalid the instant this returns.
MINIAV_API MiniAVResultCode MiniAV_ReleaseBuffer(void *internal_handle);

MINIAV_API MiniAVResultCode MiniAV_Free(void *ptr);

MINIAV_API MiniAVResultCode MiniAV_FreeDeviceList(MiniAVDeviceInfo *devices,
                                                  uint32_t count);

MINIAV_API MiniAVResultCode
MiniAV_FreeFormatList(void *formats,
                      uint32_t count);


// --- Camera Capture API ---
MINIAV_API MiniAVResultCode
MiniAV_Camera_EnumerateDevices(MiniAVDeviceInfo **devices, uint32_t *count);

MINIAV_API MiniAVResultCode MiniAV_Camera_GetSupportedFormats(
    const char *device_id, MiniAVVideoInfo **formats,
    uint32_t *count); // Placeholder for MiniAVVideoInfo
MINIAV_API MiniAVResultCode MiniAV_Camera_GetDefaultFormat(
    const char *device_id, MiniAVVideoInfo *format_out);

MINIAV_API MiniAVResultCode MiniAV_Camera_GetConfiguredFormat(
    MiniAVCameraContextHandle context, MiniAVVideoInfo *format_out);

MINIAV_API MiniAVResultCode
MiniAV_Camera_CreateContext(MiniAVCameraContextHandle *context);

MINIAV_API MiniAVResultCode
MiniAV_Camera_DestroyContext(MiniAVCameraContextHandle context);

MINIAV_API MiniAVResultCode MiniAV_Camera_Configure(
    MiniAVCameraContextHandle context, const char *device_id,
    const void *format);

MINIAV_API MiniAVResultCode
MiniAV_Camera_StartCapture(MiniAVCameraContextHandle context,
                           MiniAVBufferCallback callback, void *user_data);

MINIAV_API MiniAVResultCode
MiniAV_Camera_StopCapture(MiniAVCameraContextHandle context);


// --- Screen Capture API ---
MINIAV_API MiniAVResultCode
MiniAV_Screen_CreateContext(MiniAVScreenContextHandle *context);

MINIAV_API MiniAVResultCode MiniAV_Screen_EnumerateDisplays(
    MiniAVDeviceInfo **displays_out, uint32_t *count_out);

MINIAV_API MiniAVResultCode
MiniAV_Screen_EnumerateWindows(MiniAVDeviceInfo **windows, uint32_t *count);

MINIAV_API MiniAVResultCode MiniAV_Screen_GetDefaultFormats(
    const char *display_id, MiniAVVideoInfo *video_format_out,
    MiniAVAudioInfo *audio_format_out);

MINIAV_API MiniAVResultCode
MiniAV_Screen_DestroyContext(MiniAVScreenContextHandle context);

// iOS: set the App Group identifier used by the broadcast-extension tier
// (system-wide capture). Must be called before configuring the
// "system_screen_broadcast" display. Returns NOT_SUPPORTED off-iOS.
MINIAV_API MiniAVResultCode
MiniAV_Screen_SetIOSAppGroup(const char *app_group_id);


// Include the mouse cursor in captured screen frames. Off by default (frames
// are cursor-less). Must be called BEFORE configuring the display/window.
// Backends: WGC (IsCursorCaptureEnabled), macOS ScreenCaptureKit
// (showsCursor), Linux PipeWire (portal embedded cursor mode). Windows DXGI
// Desktop Duplication cannot draw the cursor: if enabled on a DXGI context it
// logs a warning and captures cursor-less anyway — use the WGC backend when
// you need the cursor on Windows.
MINIAV_API MiniAVResultCode
MiniAV_Screen_SetCaptureCursor(MiniAVScreenContextHandle context, bool enabled);


// --- Global Lifecycle ---
//
// MiniAV_Dispose() atomically disables all callback dispatch and waits for
// any in-flight callback invocations to complete before returning.  Call this
// before tearing down Dart NativeCallable handles — for example, from
// Flutter's reassemble() — to prevent "Callback invoked after it has been
// deleted" fatal crashes during hot restart.
//
// MiniAV_EnableCallbacks() re-enables callback dispatch.  It is called
// automatically by every MiniAV_*_StartCapture() function so that a new
// recording session works correctly after a previous MiniAV_Dispose() call.
// Explicit calls are rarely needed.
MINIAV_API MiniAVResultCode MiniAV_Dispose(void);

MINIAV_API MiniAVResultCode MiniAV_EnableCallbacks(void);