miniav_ffi/lib/miniav_ffi_bindings.dart

// ignore_for_file: camel_case_types
// ignore_for_file: prefer_double_quotes
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names
// ignore_for_file: prefer_expression_function_bodies
// ignore_for_file: sort_constructors_first
// ignore_for_file: unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_GetVersion')
external int _MiniAV_GetVersion(
  ffi.Pointer<ffi.Uint32> major,
  ffi.Pointer<ffi.Uint32> minor,
  ffi.Pointer<ffi.Uint32> patch,
);

MiniAVResultCode MiniAV_GetVersion(
  ffi.Pointer<ffi.Uint32> major,
  ffi.Pointer<ffi.Uint32> minor,
  ffi.Pointer<ffi.Uint32> patch,
) => MiniAVResultCode.fromValue(_MiniAV_GetVersion(major, minor, patch));

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> MiniAV_GetVersionString();

@ffi.Native<ffi.Int Function(MiniAVLogCallback, ffi.Pointer<ffi.Void>)>(
  symbol: 'MiniAV_SetLogCallback',
)
external int _MiniAV_SetLogCallback(
  MiniAVLogCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

MiniAVResultCode MiniAV_SetLogCallback(
  MiniAVLogCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(_MiniAV_SetLogCallback(callback, user_data));

@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>(symbol: 'MiniAV_SetLogLevel')
external int _MiniAV_SetLogLevel(int level);

MiniAVResultCode MiniAV_SetLogLevel(MiniAVLogLevel level) =>
    MiniAVResultCode.fromValue(_MiniAV_SetLogLevel(level.value));

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int)>(
  symbol: 'MiniAV_GetErrorString',
)
external ffi.Pointer<ffi.Char> _MiniAV_GetErrorString(int code);

ffi.Pointer<ffi.Char> MiniAV_GetErrorString(MiniAVResultCode code) =>
    _MiniAV_GetErrorString(code.value);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>(
  symbol: 'MiniAV_ReleaseBuffer',
)
external int _MiniAV_ReleaseBuffer(ffi.Pointer<ffi.Void> internal_handle);

MiniAVResultCode MiniAV_ReleaseBuffer(ffi.Pointer<ffi.Void> internal_handle) =>
    MiniAVResultCode.fromValue(_MiniAV_ReleaseBuffer(internal_handle));

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>)>(symbol: 'MiniAV_Free')
external int _MiniAV_Free(ffi.Pointer<ffi.Void> ptr);

MiniAVResultCode MiniAV_Free(ffi.Pointer<ffi.Void> ptr) =>
    MiniAVResultCode.fromValue(_MiniAV_Free(ptr));

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVDeviceInfo>, ffi.Uint32)>(
  symbol: 'MiniAV_FreeDeviceList',
)
external int _MiniAV_FreeDeviceList(
  ffi.Pointer<MiniAVDeviceInfo> devices,
  int count,
);

MiniAVResultCode MiniAV_FreeDeviceList(
  ffi.Pointer<MiniAVDeviceInfo> devices,
  int count,
) => MiniAVResultCode.fromValue(_MiniAV_FreeDeviceList(devices, count));

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint32)>(
  symbol: 'MiniAV_FreeFormatList',
)
external int _MiniAV_FreeFormatList(ffi.Pointer<ffi.Void> formats, int count);

MiniAVResultCode MiniAV_FreeFormatList(
  ffi.Pointer<ffi.Void> formats,
  int count,
) => MiniAVResultCode.fromValue(_MiniAV_FreeFormatList(formats, count));

// --- Global lifecycle ---

@ffi.Native<ffi.Int Function()>(symbol: 'MiniAV_Dispose')
external int _MiniAV_Dispose();

/// Atomically disables all callback dispatch and waits for any in-flight
/// callback invocations to complete.  Call this before tearing down Dart
/// [NativeCallable] handles (e.g. from Flutter's [reassemble]) to prevent
/// "Callback invoked after it has been deleted" fatal crashes on hot restart.
MiniAVResultCode MiniAV_Dispose() =>
    MiniAVResultCode.fromValue(_MiniAV_Dispose());

@ffi.Native<ffi.Int Function()>(symbol: 'MiniAV_EnableCallbacks')
external int _MiniAV_EnableCallbacks();

/// Re-enables callback dispatch after a [MiniAV_Dispose] call.  Called
/// automatically by every `MiniAV_*_StartCapture` C function — explicit Dart
/// calls are rarely needed.
MiniAVResultCode MiniAV_EnableCallbacks() =>
    MiniAVResultCode.fromValue(_MiniAV_EnableCallbacks());

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Camera_EnumerateDevices')
external int _MiniAV_Camera_EnumerateDevices(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
);

MiniAVResultCode MiniAV_Camera_EnumerateDevices(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> devices,
  ffi.Pointer<ffi.Uint32> count,
) =>
    MiniAVResultCode.fromValue(_MiniAV_Camera_EnumerateDevices(devices, count));

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<MiniAVVideoInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Camera_GetSupportedFormats')
external int _MiniAV_Camera_GetSupportedFormats(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Pointer<MiniAVVideoInfo>> formats,
  ffi.Pointer<ffi.Uint32> count,
);

MiniAVResultCode MiniAV_Camera_GetSupportedFormats(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Pointer<MiniAVVideoInfo>> formats,
  ffi.Pointer<ffi.Uint32> count,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_GetSupportedFormats(device_id, formats, count),
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<MiniAVVideoInfo>)
>(symbol: 'MiniAV_Camera_GetDefaultFormat')
external int _MiniAV_Camera_GetDefaultFormat(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVVideoInfo> format_out,
);

MiniAVResultCode MiniAV_Camera_GetDefaultFormat(
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<MiniAVVideoInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_GetDefaultFormat(device_id, format_out),
);

@ffi.Native<
  ffi.Int Function(MiniAVCameraContextHandle, ffi.Pointer<MiniAVVideoInfo>)
>(symbol: 'MiniAV_Camera_GetConfiguredFormat')
external int _MiniAV_Camera_GetConfiguredFormat(
  MiniAVCameraContextHandle context,
  ffi.Pointer<MiniAVVideoInfo> format_out,
);

MiniAVResultCode MiniAV_Camera_GetConfiguredFormat(
  MiniAVCameraContextHandle context,
  ffi.Pointer<MiniAVVideoInfo> format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_GetConfiguredFormat(context, format_out),
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVCameraContextHandle>)>(
  symbol: 'MiniAV_Camera_CreateContext',
)
external int _MiniAV_Camera_CreateContext(
  ffi.Pointer<MiniAVCameraContextHandle> context,
);

MiniAVResultCode MiniAV_Camera_CreateContext(
  ffi.Pointer<MiniAVCameraContextHandle> context,
) => MiniAVResultCode.fromValue(_MiniAV_Camera_CreateContext(context));

@ffi.Native<ffi.Int Function(MiniAVCameraContextHandle)>(
  symbol: 'MiniAV_Camera_DestroyContext',
)
external int _MiniAV_Camera_DestroyContext(MiniAVCameraContextHandle context);

MiniAVResultCode MiniAV_Camera_DestroyContext(
  MiniAVCameraContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Camera_DestroyContext(context));

@ffi.Native<
  ffi.Int Function(
    MiniAVCameraContextHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Camera_Configure')
external int _MiniAV_Camera_Configure(
  MiniAVCameraContextHandle context,
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Void> format,
);

MiniAVResultCode MiniAV_Camera_Configure(
  MiniAVCameraContextHandle context,
  ffi.Pointer<ffi.Char> device_id,
  ffi.Pointer<ffi.Void> format,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_Configure(context, device_id, format),
);

@ffi.Native<
  ffi.Int Function(
    MiniAVCameraContextHandle,
    MiniAVBufferCallback,
    ffi.Pointer<ffi.Void>,
  )
>(symbol: 'MiniAV_Camera_StartCapture')
external int _MiniAV_Camera_StartCapture(
  MiniAVCameraContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

MiniAVResultCode MiniAV_Camera_StartCapture(
  MiniAVCameraContextHandle context,
  MiniAVBufferCallback callback,
  ffi.Pointer<ffi.Void> user_data,
) => MiniAVResultCode.fromValue(
  _MiniAV_Camera_StartCapture(context, callback, user_data),
);

@ffi.Native<ffi.Int Function(MiniAVCameraContextHandle)>(
  symbol: 'MiniAV_Camera_StopCapture',
)
external int _MiniAV_Camera_StopCapture(MiniAVCameraContextHandle context);

MiniAVResultCode MiniAV_Camera_StopCapture(MiniAVCameraContextHandle context) =>
    MiniAVResultCode.fromValue(_MiniAV_Camera_StopCapture(context));

@ffi.Native<ffi.Int Function(ffi.Pointer<MiniAVScreenContextHandle>)>(
  symbol: 'MiniAV_Screen_CreateContext',
)
external int _MiniAV_Screen_CreateContext(
  ffi.Pointer<MiniAVScreenContextHandle> context,
);

MiniAVResultCode MiniAV_Screen_CreateContext(
  ffi.Pointer<MiniAVScreenContextHandle> context,
) => MiniAVResultCode.fromValue(_MiniAV_Screen_CreateContext(context));

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>(
  symbol: 'MiniAV_Screen_SetIOSAppGroup',
)
external int _MiniAV_Screen_SetIOSAppGroup(ffi.Pointer<ffi.Char> app_group_id);

MiniAVResultCode MiniAV_Screen_SetIOSAppGroup(
  ffi.Pointer<ffi.Char> app_group_id,
) => MiniAVResultCode.fromValue(_MiniAV_Screen_SetIOSAppGroup(app_group_id));

@ffi.Native<ffi.Int Function(MiniAVScreenContextHandle, ffi.Bool)>(
  symbol: 'MiniAV_Screen_SetCaptureCursor',
)
external int _MiniAV_Screen_SetCaptureCursor(
  MiniAVScreenContextHandle context,
  bool enabled,
);

MiniAVResultCode MiniAV_Screen_SetCaptureCursor(
  MiniAVScreenContextHandle context,
  bool enabled,
) =>
    MiniAVResultCode.fromValue(
      _MiniAV_Screen_SetCaptureCursor(context, enabled),
    );

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Screen_EnumerateDisplays')
external int _MiniAV_Screen_EnumerateDisplays(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> displays_out,
  ffi.Pointer<ffi.Uint32> count_out,
);

MiniAVResultCode MiniAV_Screen_EnumerateDisplays(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> displays_out,
  ffi.Pointer<ffi.Uint32> count_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_EnumerateDisplays(displays_out, count_out),
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>>,
    ffi.Pointer<ffi.Uint32>,
  )
>(symbol: 'MiniAV_Screen_EnumerateWindows')
external int _MiniAV_Screen_EnumerateWindows(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> windows,
  ffi.Pointer<ffi.Uint32> count,
);

MiniAVResultCode MiniAV_Screen_EnumerateWindows(
  ffi.Pointer<ffi.Pointer<MiniAVDeviceInfo>> windows,
  ffi.Pointer<ffi.Uint32> count,
) =>
    MiniAVResultCode.fromValue(_MiniAV_Screen_EnumerateWindows(windows, count));

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<MiniAVVideoInfo>,
    ffi.Pointer<MiniAVAudioInfo>,
  )
>(symbol: 'MiniAV_Screen_GetDefaultFormats')
external int _MiniAV_Screen_GetDefaultFormats(
  ffi.Pointer<ffi.Char> display_id,
  ffi.Pointer<MiniAVVideoInfo> video_format_out,
  ffi.Pointer<MiniAVAudioInfo> audio_format_out,
);

MiniAVResultCode MiniAV_Screen_GetDefaultFormats(
  ffi.Pointer<ffi.Char> display_id,
  ffi.Pointer<MiniAVVideoInfo> video_format_out,
  ffi.Pointer<MiniAVAudioInfo> audio_format_out,
) => MiniAVResultCode.fromValue(
  _MiniAV_Screen_GetDefaultFormats(
    display_id,
    video_format_out,
    audio_format_out,
  ),
);

@ffi.Native<ffi.Int Function(MiniAVScreenContextHandle)>(
  symbol: 'MiniAV_Screen_DestroyContext',
)
external int _MiniAV_Screen_DestroyContext(MiniAVScreenContextHandle context);

MiniAVResultCode MiniAV_Screen_DestroyContext(
  MiniAVScreenContextHandle context,
) => MiniAVResultCode.fromValue(_MiniAV_Screen_DestroyContext(context));
